# test_backend_dev

./: README.md  pyproject.toml
main/: admin.py  models.py  serializers.py  views.py
main/migrations/: 0001_initial.py
templates/main/: index.html
test_backend/: settings.py  urls.py
utils/: models.py
